ellipsis and better fix whitespace problem

--- a/assets/styles/component.scss
+++ b/assets/styles/component.scss
@@ -217,7 +217,6 @@ textarea {
 }
 
 .input-group {
-  font-size: 0;
   & > * {
     position: relative;
     z-index: 0;
